fix: recover ESFieldProperty
REFS: f/1618-get-criteria-works-without-admin-rights-workaround